# chi-bench

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: prices.yaml  submission_example.yaml
configs/experiments/: table1_main_matrix.yaml  table2_e2e_arena.yaml  table3_marathon.yaml  table4_skill_ablation.yaml  table5_mcp_vs_cli.yaml
configs/submissions/: glm-5-2-openai-agents.yaml  sonnet-5-claude-code.yaml
docker/: Dockerfile  Dockerfile.harbor  entrypoint.sh
docker/shims/healthverse/: __init__.py
docs/: architecture.md  cli.md  extending.md  harbor-hub.md  judge.md  reproduce.md  submission-packet.md
docs/superpowers/plans/: 2026-05-07-chi-bench-oss-release-plan.md  2026-05-11-chi-bench-oss-release-plan.md  2026-05-12-extending-chi-bench.md  2026-05-12-leaderboard.md  2026-05-12-readme-oss-release-plan.md
docs/superpowers/specs/: 2026-05-07-chi-bench-oss-release-design.md  2026-05-11-chi-bench-oss-release-design.md  2026-05-12-chi-bench-logo-design.md  2026-05-12-extending-chi-bench-design.md  2026-05-12-leaderboard-design.md  2026-05-12-readme-oss-release-design.md
scripts/: _bootstrap.py  _emit_run_table_commands.py  _wilson.py  aggregate.py  export_harbor_tasks.py  package_hf_dataset.py  run_table.sh
src/chi_bench/: __init__.py  aggregator.py  bootstrap.py  bootstrap_cm.py  cli.py  copilot.py
tests/smoke/: README.md  test_docker_image_builds.py  test_verify_data_layout.py
tests/unit/: test_agent_registry.py  test_aggregate.py  test_bootstrap.py  test_cli_agent_list.py  test_docker_env.py  test_emit_run_table.py  test_judge_env_isolation.py  test_judge_parsing.py  test_packet_readme.py  test_patient_simulator.py  test_prepare_packet.py  test_runner_argv.py  test_state_machines.py  test_submission_config.py  test_trajectory_pack.py  test_wilson.py
(+153 files in other folders)
