[project]
name = "chi-bench"
version = "0.1.0"
description = "chi-Bench: long-horizon, policy-rich healthcare workflows for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "chi-Bench authors" },
]
dependencies = [
    "pydantic>=2.8.0",
    "sqlmodel>=0.0.24",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.3.0",
    "anthropic>=0.101.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "tenacity>=8.2.0",
    "requests>=2.32.0",
    "audioop-lts>=0.2.0; python_version>='3.13'",
    "deepagents>=0.5.2",
    "markdown-it-py>=3.0.0",
    "playwright>=1.48.0",
    "modal>=1.4.2",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "harbor>=0.20.0",
]
modal = [
    "modal>=1.4.2",
]
openai-agents = [
    "openai-agents>=0.13.0,<0.14",
]
deepagents-cli = [
    "deepagents-cli",
]

[project.scripts]
chi-bench = "chi_bench.cli:app"
cb = "chi_bench.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chi_bench = [
    "conversation/guidelines/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_anthropic_key: smoke tests that hit the live judge",
    "slow: tests that take more than 30s (e.g. docker builds)",
]
addopts = "-m 'not requires_anthropic_key and not slow'"

[tool.ruff]
line-length = 100
